tests/spec/parse/snapshots/method_call_with_type_args.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() { obj.method<int>(arg); }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Block {
            items: [
                Call {
                    expression: DotAccess {
                        expression: Identifier {
                            value: "obj",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 13,
                                byte_length: 3,
                            },
                            binding_id: None,
                            qualified: None,
                        },
                        member: "method",
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 13,
                            byte_length: 10,
                        },
                        dot_access_kind: None,
                        receiver_coercion: None,
                    },
                    args: [
                        Identifier {
                            value: "arg",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 29,
                                byte_length: 3,
                            },
                            binding_id: None,
                            qualified: None,
                        },
                    ],
                    spread: None,
                    type_arguments: Unresolved(
                        [
                            Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 24,
                                    byte_length: 3,
                                },
                            },
                        ],
                    ),
                    ty: Var {
                        id: uninferred,
                    },
                    span: Span {
                        file_id: 0,
                        byte_offset: 13,
                        byte_length: 20,
                    },
                    call_kind: None,
                },
            ],
            ty: Var {
                id: uninferred,
            },
            span: Span {
                file_id: 0,
                byte_offset: 11,
                byte_length: 25,
            },
        },
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 35,
        },
    },
]
