tests/spec/parse/snapshots/negative_pattern_integer.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test(x: int) -> string {
    match x {
      -5 => "negative five",
      -1 => "negative one",
      0 => "zero",
      _ => "other",
    }
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "x",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 1,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "int",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 12,
                            byte_length: 3,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Constructor {
            name: "string",
            params: [],
            span: Span {
                file_id: 0,
                byte_offset: 20,
                byte_length: 6,
            },
        },
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Match {
                        subject: Identifier {
                            value: "x",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 37,
                                byte_length: 1,
                            },
                            resolution: Unresolved,
                        },
                        arms: [
                            MatchArm {
                                pattern: Literal {
                                    literal: Integer {
                                        value: 18446744073709551611,
                                        text: Some(
                                            "-5",
                                        ),
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 45,
                                        byte_length: 2,
                                    },
                                },
                                expression: Literal {
                                    literal: String {
                                        value: "negative five",
                                        raw: false,
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 51,
                                        byte_length: 15,
                                    },
                                },
                            },
                            MatchArm {
                                pattern: Literal {
                                    literal: Integer {
                                        value: 18446744073709551615,
                                        text: Some(
                                            "-1",
                                        ),
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 72,
                                        byte_length: 2,
                                    },
                                },
                                expression: Literal {
                                    literal: String {
                                        value: "negative one",
                                        raw: false,
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 78,
                                        byte_length: 14,
                                    },
                                },
                            },
                            MatchArm {
                                pattern: Literal {
                                    literal: Integer {
                                        value: 0,
                                        text: None,
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 98,
                                        byte_length: 1,
                                    },
                                },
                                expression: Literal {
                                    literal: String {
                                        value: "zero",
                                        raw: false,
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 103,
                                        byte_length: 6,
                                    },
                                },
                            },
                            MatchArm {
                                pattern: WildCard {
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 115,
                                        byte_length: 1,
                                    },
                                },
                                expression: Literal {
                                    literal: String {
                                        value: "other",
                                        raw: false,
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 120,
                                        byte_length: 7,
                                    },
                                },
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 31,
                            byte_length: 101,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 27,
                    byte_length: 107,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 133,
        },
    },
]
