tests/spec/parse/snapshots/nested_indexing.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() { let result = arr[i + j][k * l]; }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "result",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 17,
                                    byte_length: 6,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: IndexedAccess {
                            expression: IndexedAccess {
                                expression: Identifier {
                                    value: "arr",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 26,
                                        byte_length: 3,
                                    },
                                    resolution: Unresolved,
                                },
                                index: Binary {
                                    operator: Addition,
                                    left: Identifier {
                                        value: "i",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 30,
                                            byte_length: 1,
                                        },
                                        resolution: Unresolved,
                                    },
                                    right: Identifier {
                                        value: "j",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 34,
                                            byte_length: 1,
                                        },
                                        resolution: Unresolved,
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 30,
                                        byte_length: 5,
                                    },
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 29,
                                    byte_length: 7,
                                },
                                from_colon_syntax: false,
                            },
                            index: Binary {
                                operator: Multiplication,
                                left: Identifier {
                                    value: "k",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 37,
                                        byte_length: 1,
                                    },
                                    resolution: Unresolved,
                                },
                                right: Identifier {
                                    value: "l",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 41,
                                        byte_length: 1,
                                    },
                                    resolution: Unresolved,
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 37,
                                    byte_length: 5,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 36,
                                byte_length: 7,
                            },
                            from_colon_syntax: false,
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 13,
                            byte_length: 30,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 35,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 45,
        },
    },
]
